Biometrics: Allow disabling of fingerprint cleanups
Don't schedule cleanups at all if the driver
doesn't support enumerate function.

Change-Id: If9e1b82bc551e2fd06218b1720f5986633c1ab55
Signed-off-by: Dmitrii <bankersenator@gmail.com>
Signed-off-by: Wrdn28 <ifloraxd@gmail.com>

--- a/core/res/res/values/orion_config.xml
+++ b/core/res/res/values/orion_config.xml
@@ -247,4 +247,8 @@
 
     <!-- Whether device has a centered display cutout -->
     <bool name="config_physicalDisplayCutoutCentered">@bool/config_physicalDisplayCutout</bool>
+
+    <!-- Whether to cleanup fingerprints upon connection to the daemon and when
+         user switches -->
+    <bool name="config_cleanupUnusedFingerprints">true</bool>
 </resources>
