base: Add minimal support for Richtap vibrations
This implementation of Richtap is highly inspired by Nothings but stripped down to its essentials to match our needs.

If your device supports Richtap vibrations set "config_usesRichtapVibration" to true and enjoy!

Change-Id: I2c501478d3f02235a8318ac0ee9e2d8b7e94ce2f
Co-Authored-By: Chris Crump <chriscrawford893@gmail.com>
Co-Authored-By: Jake Weinstein <jake@aospa.co>
Co-Authored-By: UP5468-GE-ES44AC <2509942930@qq.com>
Co-Authored-By: Anay Wadhera <anay@aospa.co>
Signed-off-by: Wrdn28 <ifloraxd@gmail.com>

--- a/core/res/res/values/orion_arrays.xml
+++ b/core/res/res/values/orion_arrays.xml
@@ -5,4 +5,14 @@
 -->
 <resources>
 
+    <!-- Whitelist of package names to bypass foreground service type validation -->
+    <string-array name="config_fgsTypeValidationBypassPackages" translatable="false"/>
+
+    <!-- Whitelist of package names to bypass alarm manager validation -->
+    <string-array name="config_alarmManagerValidationBypassPackages" translatable="false"/>
+
+    <!-- Whitelist of package names to bypass broadcast reciever validation -->
+    <string-array name="config_broadcaseReceiverValidationBypassPackages" translatable="false"/>
+   <!-- Whether to use Richtap vibration -->
+   <bool name="config_usesRichtapVibration">false</bool>
 </resources>
