--- a/packages/SystemUI/res/values/orion_colors.xml
+++ b/packages/SystemUI/res/values/orion_colors.xml
@@ -6,4 +6,8 @@
 <resources>
     <!-- Sliding QS Tile -->
     <color name="tile_percentage_color">@*android:color/system_accent1_200</color>
+
+    <!-- QS Panel Style -->
+    <color name="qs_translucent_bg">#59FFFFFF</color>
+    <color name="qs_white_bg">@android:color/system_neutral1_0</color>
 </resources>
