--- a/core/res/res/values/orion_config.xml
+++ b/core/res/res/values/orion_config.xml
@@ -52,4 +52,7 @@
 
     <!-- Whether devices suports in-display fingerprint when screen is off -->
     <bool name="config_supportScreenOffUdfps">false</bool>
+
+    <!-- Smart 5G -->
+    <bool name="config_supportSmart5G">false</bool>
 </resources>
