--- a/core/res/res/values/orion_symbols.xml
+++ b/core/res/res/values/orion_symbols.xml
@@ -166,4 +166,18 @@
     <!-- Whether to cleanup fingerprints upon connection to the daemon and when
          user switches -->
     <java-symbol type="bool" name="config_cleanupUnusedFingerprints" />
+
+     <!-- Settings Restart -->
+    <java-symbol type="string" name="settings_restart_title" />
+    <java-symbol type="string" name="settings_restart_message" />
+    <!-- Soft restart dialog -->
+    <java-symbol type="string" name="system_restart_title" />
+    <java-symbol type="string" name="system_restart_message" />
+    <!-- SystemUI restart dialog -->
+    <java-symbol type="string" name="systemui_restart_title" />
+    <java-symbol type="string" name="systemui_restart_message" />
+    <!-- Launcher restart dialog -->
+    <java-symbol type="string" name="launcher_restart_title" />
+    <java-symbol type="string" name="launcher_restart_message" />
+
 </resources>
