--- a/packages/SystemUI/res/layout/nav_buttons_dpad_group_vertical.xml
+++ b/packages/SystemUI/res/layout/nav_buttons_dpad_group_vertical.xml
@@ -17,7 +17,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:systemui="http://schemas.android.com/apk/res-auto">
 
-    <com.android.systemui.navigationbar.buttons.KeyButtonView
+    <com.android.systemui.navigationbar.views.buttons.KeyButtonView
         android:id="@+id/dpad_left"
         android:layout_width="match_parent"
         android:layout_height="@dimen/navigation_side_padding"
@@ -26,7 +26,7 @@
         android:scaleType="center"
         android:contentDescription="@string/accessibility_dpad_left" />
 
-    <com.android.systemui.navigationbar.buttons.KeyButtonView
+    <com.android.systemui.navigationbar.views.buttons.KeyButtonView
         android:id="@+id/dpad_right"
         android:layout_width="match_parent"
         android:layout_height="@dimen/navigation_side_padding"
