--- a/packages/SystemUI/res/layout/internet_connectivity_dialog.xml
+++ b/packages/SystemUI/res/layout/internet_connectivity_dialog.xml
@@ -217,8 +217,7 @@
                             android:autoMirrored="true"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:src="@drawable/ic_internet_hotspot_disabled"/>
+                            android:layout_gravity="center"/>
                     </FrameLayout>
 
                     <LinearLayout
@@ -243,8 +242,7 @@
                         android:layout_height="28dp"
                         android:layout_marginStart="7dp"
                         android:layout_marginEnd="16dp"
-                        android:layout_gravity="center_vertical"
-                        android:background="?android:attr/textColorSecondary"/>
+                        android:layout_gravity="center_vertical"/>
 
                     <FrameLayout
                         android:layout_width="@dimen/settingslib_switch_track_width"
