--- a/packages/SystemUI/res/values/orion_dimens.xml
+++ b/packages/SystemUI/res/values/orion_dimens.xml
@@ -70,4 +70,6 @@
 
     <!-- The height of the WiFi toggle layout in Internet panel -->
     <dimen name="internet_dialog_wifi_toggle_height">56dp</dimen>
+
+    <dimen name="face_unlock_icon_margin_top">6dp</dimen>
 </resources>
