SystemUI: Redesign Weather Position
Signed-off-by: Wrdn28 <ifloraxd@gmail.com>

--- a/packages/SystemUI/res-keyguard/layout/current_weather_view.xml
+++ b/packages/SystemUI/res-keyguard/layout/current_weather_view.xml
@@ -20,7 +20,9 @@
     android:layout_height="wrap_content"
     android:layout_gravity="start"
     android:gravity="center_vertical"
-    android:clipToPadding="false">
+    android:clipToPadding="false"
+    android:paddingStart="16dp"
+    android:paddingEnd="16dp">
 
     <!-- Parent LinearLayout with vertical orientation -->
     <LinearLayout
@@ -33,38 +35,40 @@
             android:id="@+id/current"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
+            android:gravity="start|center_vertical"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/left_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:textColor="?attr/wallpaperTextColor"
                 android:ellipsize="end"
                 android:singleLine="true"
-                android:paddingEnd="8dp"
                 style="@style/TextAppearance.Keyguard.Secondary" />
 
             <ImageView
                 android:id="@+id/current_image"
                 android:layout_width="@dimen/widget_icon_size"
                 android:layout_height="@dimen/widget_icon_size"
+                android:layout_marginStart="8dp"
                 android:scaleType="centerInside" />
 
             <TextView
                 android:id="@+id/right_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:textColor="?attr/wallpaperTextColor"
                 android:singleLine="true"
-                android:paddingStart="8dp"
                 style="@style/TextAppearance.Keyguard.Secondary" />
 
             <TextView
                 android:id="@+id/weather_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:textColor="?attr/wallpaperTextColor"
                 android:singleLine="true"
                 style="@style/TextAppearance.Keyguard.Secondary" />
@@ -75,19 +79,21 @@
             android:id="@+id/new_line"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
+            android:gravity="start|center_vertical"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/wind_info_image"
                 android:layout_width="@dimen/widget_icon_size"
                 android:layout_height="@dimen/widget_icon_size"
+                android:layout_marginStart="8dp"
                 android:scaleType="centerInside" />
 
             <TextView
                 android:id="@+id/weather_wind_speed_info"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:textColor="?attr/wallpaperTextColor"
                 android:singleLine="true"
                 style="@style/TextAppearance.Keyguard.Secondary" />
@@ -96,12 +102,14 @@
                 android:id="@+id/pinwheel_image"
                 android:layout_width="@dimen/widget_icon_size"
                 android:layout_height="@dimen/widget_icon_size"
+                android:layout_marginStart="8dp"
                 android:scaleType="centerInside" />
 
             <TextView
                 android:id="@+id/weather_wind_direction_info"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:textColor="?attr/wallpaperTextColor"
                 android:singleLine="true"
                 style="@style/TextAppearance.Keyguard.Secondary" />
@@ -110,12 +118,14 @@
                 android:id="@+id/humidity_info_image"
                 android:layout_width="@dimen/widget_icon_size"
                 android:layout_height="@dimen/widget_icon_size"
+                android:layout_marginStart="8dp"
                 android:scaleType="centerInside" />
 
             <TextView
                 android:id="@+id/weather_humidity_info"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:textColor="?attr/wallpaperTextColor"
                 android:singleLine="true"
                 style="@style/TextAppearance.Keyguard.Secondary" />
